Warnings fixed